# PojavLauncher

./: .gitignore  .gitmodules  .travis.yml  AndroidManifest-back.xml  Android_gl4es.mk  Better Mod downloading  Fixing  GPLAY_PRIVACY_POLICY  LICENSE  MUSTREADME.md  PRIVACY_POLICY_ru  README-Zh_CN.md  README.md  SteveAlexM  SteveAlexM.yml  Zink_opengl4-6.yml  build.gradle  changelog-ar.html  changelog-az-rAZ.html  changelog-cs.html  changelog-de.html  changelog-en-rPS.html  changelog-en-rUD.html  changelog-en.html  changelog-es.html  changelog-fa-rIR.html  changelog-fil.html  changelog-fr.html  changelog-hi.html  changelog-in.html  changelog-it.html  changelog-iw.html  changelog-ja.html  changelog-kk.html  changelog-ko.html  changelog-lol-rAA.html  changelog-ms.html  changelog-pl.html  changelog-pt-rBR.html  changelog-pt.html  (+24 more)
.github/: FUNDING.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  未被翻译.yml  翻译错误.yml
.github/alur kerja/: android.CI  android.yml
.github/workflows/: Android.yml  android.yml  android_new.yml  gradle.yml  main.yml  maven.yml  scala.yml
app/: build.gradle  debug.keystore
app/src/main/: AndroidManifest.xml
app/src/main/assets/: about_en.txt  busybox-arm64  changelog.txt  current_changelog.txt  java_sandbox.policy  multidoj.dex  old_multidoj.txt  options.txt  pojavdx.dex  pojavdx.txt
app/src/main/assets/optifine_patch/: AndroidInstaller.class.patch  AndroidOptiFineUtilities.class.patch  OptiFineClassTransformer.class.patch  ReflectCall.class.patch
app/src/main/java/: log4j2.xml
app/src/main/java/optifine/: AndroidOptiFineUtilities.java
app/src/main/jni/: Android.mk  Application.mk  awt_bridge.c  egl_bridge.c  input_bridge.c  input_bridge_v2.c  input_bridge_v3.c  jre_launcher.c  log.h  utils.c  utils.h
app/src/main/jni/awt_xawt/: XToolkit.c  XlibWrapper.c  awt_AWTEvent.c  awt_Desktop.c  awt_GraphicsEnv.c  awt_InputMethod.c  awt_Insets.c  awt_Robot.c  awt_Taskbar.c  awt_UNIXToolkit.c  awt_global.h  xawt_fake.c
app/src/main/jni/fontconfig/: fontconfig.c
app/src/main/optifine/: AndroidInstaller.java  OptiFineClassTransformer.java  ReflectCall.java
app/src/main/res/anim/: translate_left_side.xml
app/src/main/res/drawable/: bitmap_wool_dark.xml  border_edittext.xml  control_button.xml  control_button_normal.xml  mcbutton.xml  spinner_change_language.xml
app/src/main/res/layout/: androidvncmain.xml  bottom_bar.xml  canvas.xml  connection_list.xml  control_action_popup_text.xml  control_mapping.xml  control_setting.xml  dummylayout.xml  entertext.xml  importexport.xml  install_mod.xml  intro_dialog.xml  launcher_login.xml  launcher_login_v2.xml  launcher_main.xml  launcher_main_v3.xml  launcher_update.xml  launcher_user.xml  lmaintab_consolelog.xml  lmaintab_news.xml  main.xml  main_with_customctrl.xml  metakey.xml  overlay.xml  repeater_dialog.xml  settings.xml  start_screen.xml  top_bar.xml  xvncpromain.xml
app/src/main/res/menu/: androidvncmenu.xml  intro_dialog_menu.xml  menu_customctrl.xml  menu_runopt.xml  menu_versionopt.xml  metakeymenu.xml  xvncmenu.xml
app/src/main/res/values-ar-rSA/: strings.xml
app/src/main/res/values-ba-rRU/: strings.xml
app/src/main/res/values-ca/: strings.xml
app/src/main/res/values-ca-rES/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-cs-rCZ/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-de-rDE/: strings.xml
app/src/main/res/values-el-rGR/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-en-rGB/: strings.xml
app/src/main/res/values-en-rUS/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-es-rES/: strings.xml
app/src/main/res/values-fr-rFR/: strings.xml
app_pojavlauncher/: build.gradle  proguard-rules.pro  upload.jks
app_pojavlauncher/gplay/: output-metadata.json
app_pojavlauncher/src/main/: AndroidManifest.xml
app_pojavlauncher/src/main/assets/: about_en.txt  config.json  default.json  language_list.txt  launcher_profiles.json  options.txt  resolv.conf
app_pojavlauncher/src/main/jni/: Android.mk  Application.mk  CMakeLists.txt  awt_bridge.c  bigcoreaffinity.c  egl_bridge.c  empty.c  gl_bridge.c  gl_bridge.h  input_bridge_v1.c  input_bridge_v3.c  jre_launcher.c  log.h  mcxr_loader.c  mcxr_loader.cpp  nativeos.c  quest_main.cpp  stdio_is.c  utils.c  utils.h
app_pojavlauncher/src/main/jni/GL/: gl.h
app_pojavlauncher/src/main/jni/OpenCompositeStub/: CMakeLists.txt  oc_stub.cpp  oc_stub.h
app_pojavlauncher/src/main/jni/VrLauncher/: CMakeLists.txt  jlaunch.cpp  log.cpp  log.h  openvr.h  sample_app.cpp  start_java.cpp  start_java.h  vrl_main.cpp  vrl_main.h
app_pojavlauncher/src/main/jni/awt_xawt/: XToolkit.c  awt_Event.c  awt_GraphicsEnv.c  xawt_fake.c
app_pojavlauncher/src/main/jni/awt_xawt_full/: XlibWrapper.c  awt_Desktop.c  awt_Robot.c  awt_global.h
app_pojavlauncher/src/main/jni/ctxbridges/: bridge_tbl.h  common.h  egl_loader.c  egl_loader.h  gl_bridge.c  gl_bridge.h  osm_bridge.c  osm_bridge.h  osmesa_loader.c  osmesa_loader.h  swap_interval_no_egl.c
app_pojavlauncher/src/main/jni/driver_helper/: hook.c  nsbypass.c  nsbypass.h
app_pojavlauncher/src/main/jni/environ/: environ.c  environ.h
app_pojavlauncher/src/main/jni/mcxr_loader/: android_native_app_glue.h  mcxr_loader.h  openxr.h  openxr_platform.h
app_pojavlauncher/src/main/jni/openxr/: openxr_reflection.h
app_pojavlauncher/src/main/jni/tinywrapper/: main.c  string_utils.c  string_utils.h
arc_dns_injector/: build.gradle
assets/javascript/: tabs.js
forge_installer/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
jre_lwjgl3glfw/: build.gradle
jre_securitymanager/: build.gradle
libs/OculusOpenXR/: .gitignore  README.md
mesa/include/: xa_composite.h  xa_context.h  xa_tracker.h
mesa/lib/pkgconfig/: osmesa.pc  xatracker.pc
scripts/: languagelist_updater.bat  languagelist_updater.sh  patch_vulkanmod.sh
xrlauncher/: build.gradle
xrlauncher/src/main/: AndroidManifest.xml
(+2349 files in other folders)
